--- a/donaciones.html
+++ b/donaciones.html
@@ -84,9 +84,9 @@
 										<li><a href="chatbot-ing.html">English</a></li>
 									</ul>
 								</li>
-								<li><a href="index.html#news">News</a></li>
+								<li><a href="index.html#noticias">News</a></li>
 								<li><a href="about.html">About Us</a></li>
-								<li><a href="index.html#contact">Contact</a></li>
+								<li><a href="index.html#contacto">Contact</a></li>
 								<li><a href="donations.html" class="donate">Donations</a></li>
 							</ul>
 						</div>
