--- a/ayuda.html
+++ b/ayuda.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Help</title>
+	<title>Donations </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Help" />
+	<meta name="description" content="donations" />
 	<meta name="keywords" content="free website podcast, religion, youtube, liahona, mormon, doctrines, covenants, artificial intelligence" />
 	<meta name="author" content="freehtml5.co" />
 
@@ -61,7 +61,7 @@
 				<div class="top-menu">
 					<div class="row">
 						<div class="col-md-12 col-offset-0 text-center">
-							<div id="fh5co-logo"><a href="index.html">Ask and you shall receive an answer</a></div>
+							<div id="fh5co-logo"><a href="index.html">Ask and you shall receive</a></div>
 						</div>
 						<div class="col-md-12 col-md-offset-0 text-center menu-1">
 							<ul>
@@ -87,7 +87,7 @@
 								<li><a href="index.html#noticias">News</a></li>
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="index.html#contacto">Contact</a></li>
-								<li><a href="ayuda.html" class="donate">Help Us</a></li>
+								<li><a href="donations.html" class="donate">Donations</a></li>
 							</ul>
 						</div>
 					</div>
@@ -104,7 +104,7 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 text-center slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Help</h1>
+				   					<h1>Donations</h1>
 										<h2>Help us move forward</h2>
 				   				</div>
 				   			</div>
@@ -118,31 +118,25 @@
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<br>
-					<p>Your generosity can be by collaborating with us, or with monetary help. The idea is to continue spreading and making the word of God accessible to everyone at any time.</p>
+					<p>Your generosity allows us to continue helping others.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
-					<h3>Ways to Help</h3>
-					<p>Choose how you want to help us.</p>
+					<h3>Donation Platforms</h3>
+					<p>Choose the payment platform you prefer to make your donation.</p>
 					<div class="row">
-						<div class="col-md-6">
-							<a href="mailto:contacto.sud.ia@gmail.com" target="_blank" class="btn btn-primary btn-modify btn-block">
-								<i class="icon-mail4"></i> Contact Us
-							</a>
-							<p>Your time is very valuable to help grow this initiative.</p>
-						</div>
 						<div class="col-md-6">
 							<a href="https://www.paypal.com/ncp/payment/UFBZMPSKZPPE8" target="_blank" class="btn btn-primary btn-modify btn-block">
 								<i class="icon-paypal"></i> Donate with PayPal
 							</a>
-							<p>You can donate what you can through PayPal.</p>
+							<p>Make your donation securely through PayPal.</p>
 						</div>
 						<div class="col-md-6">
 							<a href="https://buymeacoffee.com/sudia" target="_blank" class="btn btn-primary btn-modify btn-block">
-								<i class="icon-bill"></i> Donate with Buy Me a Coffee
+								<i class="icon-coffee"></i> Donate with Buy Me a Coffee
 							</a>
-							<p>Support our work with a donation through Buy Me a Coffee.</p>
+							<p>Support our work with a small donation through Buy Me a Coffee.</p>
 						</div>
 					</div>
 				</div>
@@ -151,8 +145,8 @@
 		<div id="fh5co-counter" class="fh5co-counters fh5co-light-grey">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
-					<p>Each one must give as he has decided in his heart, not reluctantly or under compulsion, for God loves a cheerful giver."</p>
-				</div>
+					<p>"Each one must give as he has decided in his heart, not reluctantly or under compulsion, for God loves a cheerful giver."</p>
+					</div>
 			</div>
 			<div class="row animate-box">
                 <div class="col-md-8 col-md-offset-2">
@@ -190,7 +184,7 @@
                 <h3></h3>
             </div>
             <div class="col-md-4 text-center">
-                <h2><a href="#">Ask and you shall receive an answer</a></h2>
+                <h2><a href="#">Ask and you shall receive</a></h2>
             </div>
             <div class="col-md-4 text-center">
                 <p>
@@ -201,7 +195,7 @@
                 </p>
             </div>
             <div class="row copyright">
-                <div class="col-md-12 text-center"  id="contacto">
+                <div class="col-md-12 text-center"  id="contact">
                     <p>
                         <small class="block">&copy; 2024. Some rights reserved.</small>
                          Images: <a href="https://www.churchofjesuschrist.org/legal/church-history-rights-to-use-materials?lang=eng"
