--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 								<li><a href="news.html">Noticias</a></li>						
 								<li><a href="about.html">Nosotros</a></li>
 								<li><a href="contact.html">Contacto</a></li>
-								<li><a href="#" class="donate">Donaciones</a></li>
+								<li><a href="#" class="donate">ayuda</a></li>
 							</ul>
 						</div>
 					</div>
