--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 								<li><a href="#noticias">News</a></li>
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="#contacto">Contact</a></li>
-								<li><a href="donaciones.html" class="donate">Donations</a></li>
+								<li><a href="ayuda.html" class="donate">Donations</a></li>
 							</ul>
 						</div>
 					</div>
@@ -113,7 +113,7 @@
 												<p><a class="btn btn-primary btn-demo popup-youtube"
 														href="https://www.youtube.com/watch?v=iX1f5ZQqOx0"> <i
 															class="icon-play4"></i> Watch Video</a> <a
-														class="btn btn-primary btn-learn" href="chatbot-esp.html">Go <i
+														class="btn btn-primary btn-learn" href="chatbot-ing.html">Go <i
 															class="icon-arrow-right3"></i></a></p>
 											</div>
 										</div>
@@ -197,34 +197,34 @@
 				<div class="row">
 					<div class="col-md-4 animate-box">
 						<div class="services">
-							<a href="chatbot-esp.html" class="img-holder"><img class="img-responsive" src="assets/320px-KJV-King-James-Version-Bible-first-edition-title-page-1611.jpg"
+							<a href="chatbot-ing.html" class="img-holder"><img class="img-responsive" src="assets/320px-KJV-King-James-Version-Bible-first-edition-title-page-1611.jpg"
 									alt="Bible (King James Version)"></a>
 							<div class="desc">
-								<h3><a href="chatbot-esp.html">Bible (King James Version)</a></h3>
+								<h3><a href="chatbot-ing.html">Bible (King James Version)</a></h3>
 								<p>Translation of the Christian scriptures, known for its literary beauty and precision. It is fundamental to the Christian faith.</p>
-								<a href="chatbot-esp.html">Read more <i class="icon-arrow-right3"></i></a>
+								<a href="chatbot-ing.html">Read more <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 animate-box">
 						<div class="services">
-							<a href="chatbot-esp.html" class="img-holder"><img class="img-responsive" src="assets/libro_mormon.jpg"
+							<a href="chatbot-ing.html" class="img-holder"><img class="img-responsive" src="assets/libro_mormon.jpg"
 									alt="Book of Mormon"></a>
 							<div class="desc">
-								<h3><a href="chatbot-esp.html">Book of Mormon</a></h3>
+								<h3><a href="chatbot-ing.html">Book of Mormon</a></h3>
 								<p>Holy scripture of the Church of Jesus Christ of Latter-day Saints, which tells the story of ancient peoples in the Americas and their relationship with Jesus Christ.</p>
-								<a href="chatbot-esp.html">Read more <i class="icon-arrow-right3"></i></a>
+								<a href="chatbot-ing.html">Read more <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 animate-box">
 						<div class="services">
-							<a href="chatbot-esp.html" class="img-holder"><img class="img-responsive" src="assets/La-Perla-de-Gran-Precio-Escrituras-SUD-en-Espanol-1-320.jpg"
+							<a href="chatbot-ing.html" class="img-holder"><img class="img-responsive" src="assets/La-Perla-de-Gran-Precio-Escrituras-SUD-en-Espanol-1-320.jpg"
 									alt="Pearl of Great Price"></a>
 							<div class="desc">
-								<h3><a href="chatbot-esp.html">Pearl of Great Price</a></h3>
+								<h3><a href="chatbot-ing.html">Pearl of Great Price</a></h3>
 								<p>Collection of texts revealed to Joseph Smith, including writings such as the Book of Moses and the translation of Matthew, fundamental for the LDS.</p>
-								<a href="chatbot-esp.html">Read more <i class="icon-arrow-right3"></i></a>
+								<a href="chatbot-ing.html">Read more <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
@@ -232,34 +232,34 @@
 				<div class="row">
 					<div class="col-md-4 animate-box">
 						<div class="services" id="guias">
-							<a href="chatbot-esp.html" class="img-holder"><img class="img-responsive" src="assets/doctrinas_y_convenios.jpg"
+							<a href="chatbot-ing.html" class="img-holder"><img class="img-responsive" src="assets/doctrinas_y_convenios.jpg"
 									alt="Doctrine and Covenants"></a>
 							<div class="desc">
-								<h3><a href="chatbot-esp.html">Doctrine and Covenants</a></h3>
+								<h3><a href="chatbot-ing.html">Doctrine and Covenants</a></h3>
 								<p>Compilation of prophetic revelations received by the leaders of the LDS Church, which establishes principles of doctrine and ecclesiastical organization.</p>
-								<a href="chatbot-esp.html">Read more <i class="icon-arrow-right3"></i></a>
+								<a href="chatbot-ing.html">Read more <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 animate-box">
 						<div class="services">
-							<a href="chatbot-esp.html" class="img-holder"><img class="img-responsive" src="assets/conferencias.jpeg"
+							<a href="chatbot-ing.html" class="img-holder"><img class="img-responsive" src="assets/conferencias.jpeg"
 									alt="General Conferences"></a>
 							<div class="desc">
-								<h3><a href="chatbot-esp.html">General Conferences</a></h3>
+								<h3><a href="chatbot-ing.html">General Conferences</a></h3>
 								<p>Semiannual talks offered by leaders of the LDS Church, addressing topics of faith, doctrine, and spiritual guidance.</p>
-								<a href="chatbot-esp.html">Read more <i class="icon-arrow-right3"></i></a>
+								<a href="chatbot-ing.html">Read more <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 animate-box">
 						<div class="services">
-							<a href="chatbot-esp.html" class="img-holder"><img class="img-responsive" src="assets/liahona.jpeg"
+							<a href="chatbot-ing.html" class="img-holder"><img class="img-responsive" src="assets/liahona.jpeg"
 									alt="Liahona"></a>
 							<div class="desc">
-								<h3><a href="chatbot-esp.html">Liahona</a></h3>
+								<h3><a href="chatbot-ing.html">Liahona</a></h3>
 								<p>Official LDS magazine, offering inspiring messages, church news, and resources for its members.</p>
-								<a href="chatbot-esp.html">Read more <i class="icon-arrow-right3"></i></a>
+								<a href="chatbot-ing.html">Read more <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
