--- a/ayuda.html
+++ b/ayuda.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Donations </title>
+	<title>HELP US </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="donations" />
+	<meta name="description" content="HELP US" />
 	<meta name="keywords" content="free website podcast, religion, youtube, liahona, mormon, doctrines, covenants, artificial intelligence" />
 	<meta name="author" content="freehtml5.co" />
 
@@ -87,7 +87,7 @@
 								<li><a href="index.html#noticias">News</a></li>
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="index.html#contacto">Contact</a></li>
-								<li><a href="donations.html" class="donate">Donations</a></li>
+								<li><a href="HELP US.html" class="donate">HELP US</a></li>
 							</ul>
 						</div>
 					</div>
@@ -104,7 +104,7 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 text-center slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>Donations</h1>
+				   					<h1>HELP US</h1>
 										<h2>Help us move forward</h2>
 				   				</div>
 				   			</div>
