--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 								<li><a href="#noticias">News</a></li>
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="#contacto">Contact</a></li>
-								<li><a href="ayuda.html" class="donate">Donations</a></li>
+								<li><a href="ayuda.html" class="donate">HELP US</a></li>
 							</ul>
 						</div>
 					</div>
