--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 												<h1>Listen and Watch Our Video/Podcasts</h1>
 												<h2>Immerse yourself in the scriptures with our different style</h2>
 												<p><a class="btn btn-primary btn-demo popup-youtube"
-														href="https://www.youtube.com/watch?v=hJganvq24hw"> <i
+														href="https://www.youtube.com/watch?v=rgicEyQWKkI"> <i
 															class="icon-play4"></i> Watch Video</a> <a
 														class="btn btn-primary btn-learn" href="https://www.youtube.com/@SUDIA-u8o/playlists">Go <i
 															class="icon-arrow-right3"></i></a></p>
