--- a/ayuda.html
+++ b/ayuda.html
@@ -118,30 +118,37 @@
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<br>
-					<p>Your generosity allows us to continue helping others.</p>
+					<p>Your generosity can be by collaborating with us, or with monetary help. The idea is to continue spreading and making the word of God accessible to everyone at any time.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
-					<h3>Donation Platforms</h3>
-					<p>Choose the payment platform you prefer to make your donation.</p>
+					<h3>Ways to Help</h3>
+					<p>Choose how you want to help us.</p>
 					<div class="row">
+						<div class="col-md-6">
+							<a href="mailto:contacto.sud.ia@gmail.com" target="_blank" class="btn btn-primary btn-modify btn-block">
+								<i class="icon-mail4"></i> Contact Us
+							</a>
+							<p>Your time is very valuable to help grow this initiative.</p>
+						</div>
 						<div class="col-md-6">
 							<a href="https://www.paypal.com/ncp/payment/UFBZMPSKZPPE8" target="_blank" class="btn btn-primary btn-modify btn-block">
 								<i class="icon-paypal"></i> Donate with PayPal
 							</a>
-							<p>Make your donation securely through PayPal.</p>
+							<p>You can donate whatever you can through PayPal.</p>
 						</div>
 						<div class="col-md-6">
 							<a href="https://buymeacoffee.com/sudia" target="_blank" class="btn btn-primary btn-modify btn-block">
-								<i class="icon-coffee"></i> Donate with Buy Me a Coffee
+								<i class="icon-bill"></i> Donate with Buy Me a Coffee
 							</a>
-							<p>Support our work with a small donation through Buy Me a Coffee.</p>
+							<p>Support our work with a donation through Buy Me a Coffee.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		
 		<div id="fh5co-counter" class="fh5co-counters fh5co-light-grey">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
